--- a/code/02-20_spp_randomization_partial.qmd
+++ b/code/02-20_spp_randomization_partial.qmd
@@ -35,10 +35,15 @@ In a split-plot RCBD, the block is still the level of replication for the whole-
 # Setting seed to get same randomization result every time
 set.seed(930)
 
-wp_rcbd_rand 
+wp_rcbd_rand <- crossing(krate_kgha = c(0, 30, 60),
+                         block = 1:4) %>%
+  arrange(block) %>%
   # Randomizing WP treatment factor to blocks (restricted) 
-
+  group_by(block) %>%
+  mutate(krate_kgha = sample(krate_kgha)) %>%
     # Creating WP plot numbers 
+  mutate(wplot = (block*100)+ 1:3) %>%
+ ungroup()
 
 wp_rcbd_rand
 ```
@@ -48,18 +53,24 @@ How many rows do we have in the object above? Why?
 ## SP randomization  
 Now, let's randomize the split-plot treatment factor (N rate) to the WP treatment plots.  
 ```{r sp_rcbd_rand}
-sp_rcbd_rand  
+sp_rcbd_rand <- crossing(nrate_kgha = c(0, 100, 200),
+                         wplot = wp_rcbd_rand$wplot) %>%
+  arrange(wplot) %>%
   # Randomizing SP treatment factor to WP plots (restricted)
-
+  group_by(wplot) %>%
+  mutate(nrate_kgha = sample(nrate_kgha)) %>%
   # Creating SP plot numbers 
-
+  mutate(splot = paste0(wplot, "-", 1:3)) %>%
+ungroup()
 
 sp_rcbd_rand
 ```
 
 ## Joining WP and SP into one object
 ```{r spp_rcbd_rand}
-spp_rcbd_rand 
+spp_rcbd_rand <- wp_rcbd_rand %>%
+  right_join(sp_rcbd_rand) %>%
+  mutate(trtname = paste0(krate_kgha, "+", nrate_kgha))
 
 spp_rcbd_rand
 ```
@@ -68,7 +79,8 @@ How many rows in the object above? Why?
 
 Let's inspect block 1.  
 ```{r}
-spp_rcbd_rand  
+spp_rcbd_rand  %>%
+  filter(block ==1)
 ```
 
 Notice wplot and splot columns. What is going on here?  
